Projet_GL/src/test/deca/context/valid/unprovided/readIntAsFloat.deca
// Description:
//    Appel d'un readInt sur un float
//
// Resultat:
//    En fonction de la valeur entrée
//
// Historique:
//    Créé le 24/01/2018

{
     float a = readInt();
}
	