Projet_GL/src/test/deca/context/invalid/unprovided/voidAssign.deca
// Description:
//	Declaration d'une variable de type void
//
// Resultat: Ligne 10
//	ContextualError: Variable cannot be declared with void type
//
// Historique:
//    cree le 24/01/2018
{
	void a;
}